<resources>
    <string name="app_name">WorldWideCDLN</string>
    <string name="memberInformation">Member Information</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="emailAddress">Email Address</string>
    <string name="confirmEmailAddress">Confirm Email Address</string>
    <string name="activenetwork">ActiveNetwork</string>
    <string name="member">Given by Member or Rep</string>
    <string name="signup">Sign Up</string>
    <string name="cancel">Cancel</string>
    <string name="referenceNumber">Reference Number</string>
    <string name="adding">We are adding more Driver,Jobs,Freight,Prizes and Network daily</string>
    <string name="yourEmail">Your Email</string>
    <string name="yourPassword">Your Password</string>
    <string name="remeberMe">Remember Me</string>
    <string name="login">Login</string>
    <string name="forgotpassword">ForgotPassword?</string>
    <string name="logistics">COMPANY-DRIVERS-LOGISTICS</string>
    <string name="logisticsValue">Welcome to WorldCDL Network,lets connect you to other members in your country and abroad that are looking to help you do businessWelcome to WorldCDL Network</string>
    <string name="insuranceCard">Insurance Card</string>
    <string name="takeAPhoto">Take A Photo</string>
    <string name="update">Update</string>
    <string name="licensePhoto">License Photo</string>
    <string name="password">Password</string>
    <string name="bankAccount">Bank Account</string>
    <string name="dob">Date of Birth</string>
    <string name="phone">Phone No.</string>
    <string name="state">State</string>
    <string name="zip">Zip</string>
    <string name="address">Address</string>
    <string name="vehiclephoto">Vehicle Photo</string>
    <string name="plateNumber">Vehicle Plate Number</string>
    <string name="vehicleType">Vehicle Type:</string>
    <string name="vehicleYear">Vehicle Year</string>
    <string name="vehicleMake">Vehicle Make</string>
    <string name="vehicleModel">Vehicle Model</string>
    <string name="vehicleTypes">Vehicle Type</string>
    <string name="driverdetail">Take photo of your trailer our list if WCDL \ndoesn\'t have it.WCDL will review your trailer and\nif photo is acceptable then we will add it \nto your list.\n\nAll photos must be HD and submitted as .jpg \nor .png with size more than 500 * 300 pixels \nwith white background.\n\nAll others will be deleted.</string>
    <string name="vehicleRegistration">Vehicle Registration Expiration Date</string>
    <string name="expirationDate">Expiration Date(MM/dd/yyyy)</string>
    <string name="title">Title</string>
    <string name="VIN">VIN</string>
    <string name="yearmake">Year/Make</string>
    <string name="type">Type</string>
    <string name="registrationId">Registration Id</string>
    <string name="track">We made it easy for you to track your item or person.Just Select your Bol# from Active List or History.</string>
    <string name="activeBol">Active BOL\'s</string>
    <string name="bolHistroy">Bol History</string>
    <string name="driver_information">Driver Information</string>
    <string name="driver_review">Driver Review</string>
    <string name="cancellationTime">Cancellation Time</string>
    <string name="cancelDetail">YOU HAVE 5:00 MINUTES TO CONFIRM PICKUP OR AUTOMATICALLY CANCELLED BY YOU</string>
    <string name="confirm">Confirm</string>
    <string name="cancelDriver">Cancel Driver</string>
    <string name="contactDriver">Contact Driver</string>
    <string name="licenseNumber">License Number</string>
    <string name="licenseState">License State</string>
    <string name="messageToDriver">Message To Driver</string>
    <string name="message">Come up 8th floor please i have with some heavy luagage</string>
    <string name="requestDriver">Reuest Driver</string>
    <string name="back">Back</string>
    <string name="aboutMe">About Me</string>
    <string name="aboutMeDetail">Reference site about lpsurm giving  informnation on its origin as well as arandom</string>
    <string name="job">Job :</string>
    <string name="client">Client</string>
    <string name="name">Name</string>
    <string name="tellFriends">Tell Friends</string>
    <string name="support">Support</string>
    <string name="about">About</string>
    <string name="writeYourComment">Write your Comment</string>
    <string name="routePayment">Out of Route Payment</string>
    <string name="tripMiles">Total Trip Miles</string>
    <string name="tripPrice">Trip Price</string>
    <string name="tripBonus">Trip Bonus</string>
    <string name="totalTripCost">Total Trip Costs</string>
    <string name="confirmArrival">Confirm Arrival</string>
    <string name="driver_ranking">Driver Rankings</string>
    <string name="challenges">Challenges</string>
    <string name="company_ranking">Company_Rankings</string>
    <string name="payment">Payment</string>
    <string name="invoices">Invoices</string>
    <string name="tellFriend">Tell A Friend</string>
    <string name="driver">Superman can \"leap tall buildings in a single bound,\" but the word bound is usually about boundaries. When you\'re playing soccer or football, the ball goes \"out of bounds.\" Someone can also be bound with rope — tied up. Commitments are another kind of tie. When you get married, you\'re bound to your partner. If you make a promise, you\'re bound to your word. On a less pleasant note, if you\'re constipated, you\'re bound up.</string>
    <string name="comment">. Commitments are another kind of tie. When you get married, you\'re bound to your partner. If you make a promise, you\'re bound to your</string>
    <string name="submit">Submit</string>
    <string name="useGps">Use My GPS Location</string>
    <string name="oneStop">One Stop</string>
    <string name="multistops">Multi Stops</string>
    <string name="roundTrip">Round Trip</string>
    <string name="pickUpLocation">PICK UP LOCATION</string>
    <string name="driverOutOfRoutemile">Driver out of route miles</string>
    <string name="paymentTotal">Out of route payment total</string>
    <string name="destinationAddMiles">Pick Up to Destination Address miles</string>
    <string name="totalTripmiles">Total trip miles</string>
    <string name="totalTripprice">Trip Price</string>
    <string name="tipBonus">Tip/Bonus</string>
    <string name="memberEmailVerfication">Member Email verification</string>
    <string name="newPassword">A email was send to your email address given,please add this temp password</string>
    <string name="tempPassword">Temp Password</string>
    <string name="resendTempPassword">Resend Temp Password</string>
    <string name="verify">Verify</string>
    <string name="buyNow">Buy Now</string>
    <string name="home">Home</string>
    <string name="inventorySearch">Inventory Search</string>
    <string name="inventoryAuction">Inventory Auction</string>
    <string name="inventoryBuyNow">Inventory Buy Now</string>
    <string name="itemRating">Item Rating</string>
    <string name="storage">From WAREHOUSE/STORAGE UNIT</string>
    <string name="moveinDate">Move-In date</string>
    <string name="moveoutDate">Move-Out date</string>
    <string name="location">Location</string>
    <string name="advanceUser">ADVANCE USER</string>
    <string name="addPlace">ADD PLACE</string>
    <string name="search">SEARCH</string>
    <string name="addStorage">ADD STORAGE UNIT</string>
    <string name="requestStorage">Request Storage Unit</string>
    <string name="unitAvailable">UNITS AVAILABLE</string>
    <string name="pricePerMonth">PRICE PER MONTH</string>
    <string name="forSale">For Sale</string>
    <string name="submitStorage">Submit Storage Unit</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="rentalType">RENTAL TYPE</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="selectALl">Select All</string>
    <string name="lease">Lease</string>
    <string name="security">24 HOUR SECURITY</string>
    <string name="underCover">UnderCover Parking</string>
    <string name="coveredRv">Covered RV Parking</string>
    <string name="driveStorage">Drive-Up Storage</string>
    <string name="interior">Interior Climate Controlled</string>
    <string name="storageSearch">STORAGE UNIT SEARCH RESULTS</string>
    <string name="avaliableEnding">AVAILABLE DATE ENDING DATE</string>
    <string name="storageUnitLocation">STORAGE UNIT LOCATION</string>
    <string name="editingSearch">EDIT SEARCH</string>
    <string name="addStorageUnit">ADD STORAGE UNIT</string>
    <string name="searchStorageUnit">SEARCH STORAGE UNIT SIZE</string>
    <string name="needALift">I NEED A LIFT</string>
    <string name="vehicles">Vehicles</string>
    <string name="aDDITEMS">Add Items</string>
    <string name="paymentOption">PAYMENT OPTIONS</string>
    <string name="selectDriver">SELECT DRIVER</string>
    <string name="driverArrival">DRIVER ARRIVED</string>
    <string name="dropOff">DROP OFF</string>
    <string name="client_information">Client Information</string>
    <string name="saveClient">Save Client to My Network</string>
    <string name="arrived">ARRIVED</string>
    <string name="arrive">Click Arrive Button  to notify Client of Arrival .\\n Client will have 5:00 minutes to confirm</string>
    <string name="vehicleSelected">Vehicle Selected:</string>
    <string name="trip">Trip:</string>
    <string name="price">Price:</string>
    <string name="note">Note:</string>
    <string name="departureInformation">Departure Information</string>
    <string name="time">Time:</string>
    <string name="distuributiionCenter">Distribution Center</string>
    <string name="climateControlled">Climate Controlled</string>
    <string name="automated">Automated</string>
    <string name="railway">Railway</string>
    <string name="packing">Packing</string>
    <string name="owner">Owner</string>
    <string name="year">Year</string>
    <string name="ownername">Bikesss</string>
    <string name="members">Members</string>
    <string name="clientname">Client Name</string>
    <string name="daytime">Day/Time</string>
    <string name="paid">Paid</string>
    <string name="onestop">Pick Up Route One Stop</string>
    <string name="onestopdetail">Starting a PUR One Stop the carrieris \ngiving information that they are going from \nPoint A to Point B at a set time and date.</string>
    <string name="roundtrip">Pick Up Route Round Trip</string>
    <string name="roundtripdetail">Starting a PUR RT the Carrier is giving \ninformation that they are going from Point A\nto Point B and back to Point A at a set time and date.</string>
    <string name="mutltistop">Pick Up Route Multi Stop</string>
    <string name="mutltistopdetail">Starting a PUR MT the carrier is giving \ninformation that they are going from Point A \nto Multiple stops at a set time and date.</string>
    <string name="clientdetail">A Client requesting service will only see that \nthis Carrier is going their direction at a set \ntime of day requested.</string>
    <string name="cheboxnotshown">Don\'t show this page again.</string>
    <string name="copyright">Worldwide CDL Network copyright 2017</string>
    <string name="starts">Start</string>
    <string name="posts">POSTS</string>
    <string name="postsdetail">Be notified when Items you are looking for in your network or networks are posted. A message with link  will be sent to you.</string>
    <string name="networkPosts">NETWORK POSTS</string>
    <string name="networkdetail">Review posts from members in your network or networks. You might have this Item but you didn\'t post it in your inventory or hidden in your inventory.</string>
    <string name="skip">Skip this page in future</string>
    <string name="gotoposts">Go to Posts</string>
</resources>