<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:orientation="vertical"
    android:layout_marginTop="10dp"
    android:layout_height="match_parent">
<com.hocrox.worldwidecdln.utils.CustomTextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textColor="@color/ColorblackText"
    android:text="@string/posts" />

    <com.hocrox.worldwidecdln.utils.CustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorgreytext"
        android:text="@string/postsdetail" />

    <com.hocrox.worldwidecdln.utils.CustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/ColorblackText"
        android:text="@string/networkPosts" />
    <com.hocrox.worldwidecdln.utils.CustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorgreytext"
        android:text="@string/networkdetail" />

    <android.support.v7.widget.AppCompatCheckBox
        android:layout_width="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/skip"
        android:textColor="@color/colorgreytext"
        android:layout_height="wrap_content" />

    <com.hocrox.worldwidecdln.utils.CustomTextView
        android:id="@+id/tvPosts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:layout_toRightOf="@+id/tvCancel"
        android:background="@drawable/textview_modification"
        android:paddingBottom="10dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="10dp"
        android:text="@string/gotoposts"
        android:textColor="@color/colorWhite"
        android:textSize="12sp" />
</LinearLayout>
