<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:padding="10dp">

        <com.hocrox.worldwidecdln.utils.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="WCDL Balance"
            android:textColor="@color/ColorblackText"
            android:textStyle="bold" />

        <com.hocrox.worldwidecdln.utils.CustomTextView
            android:id="@+id/tvBalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:text="$ 4.00"
            android:textColor="@color/ColorblackText"
        />

    </LinearLayout>

    <ScrollView
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.hocrox.worldwidecdln.utils.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/onestop"
                android:textColor="@color/ColorblackText"
                />

            <com.hocrox.worldwidecdln.utils.CustomTextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/onestopdetail"
                android:textColor="@color/colorgreytext"
             />

            <com.hocrox.worldwidecdln.utils.CustomTextView
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/roundtrip"
                android:textColor="@color/ColorblackText"
               />

            <com.hocrox.worldwidecdln.utils.CustomTextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/roundtripdetail"
                android:textColor="@color/colorgreytext"
                />

            <com.hocrox.worldwidecdln.utils.CustomTextView
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mutltistop"
                android:textColor="@color/ColorblackText"
                />

            <com.hocrox.worldwidecdln.utils.CustomTextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mutltistopdetail"
                android:textColor="@color/colorgreytext"
             />

            <com.hocrox.worldwidecdln.utils.CustomTextView
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/client"
                android:textColor="@color/ColorblackText"
               />

            <com.hocrox.worldwidecdln.utils.CustomTextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clientdetail"
                android:textColor="@color/colorgreytext"
                android:textStyle="bold" />

            <android.support.v7.widget.AppCompatCheckBox
                android:layout_marginTop="25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cheboxnotshown"
                android:gravity="center"
                android:textColor="@color/ColorblackText"
        />

            <com.hocrox.worldwidecdln.utils.CustomTextView
                android:id="@+id/tvStart"
                android:textColor="@android:color/white"
                android:layout_marginTop="30dp"
                android:paddingLeft="55dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"

                android:paddingRight="55dp"
                android:layout_gravity="center"
                android:background="@drawable/textview_modification"
                android:text="@string/starts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.hocrox.worldwidecdln.utils.CustomTextView
                android:padding="3dp"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="40dp"
                android:layout_gravity="center"
                android:text="@string/copyright"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>