<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_margin="2dp"
    android:layout_height="wrap_content">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/rl_rootLayout"
        android:padding="6dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivAirline"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/truck" />

        <com.hocrox.worldwidecdln.utils.CustomTextView
            android:id="@+id/tvAirline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/ivAirline"
            android:text="@string/name"
            android:textColor="@color/ColorblackText"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvAirline"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="7dp"
            android:layout_toRightOf="@id/ivAirline"

            android:text="@string/price"
            android:textColor="@color/ColorblackText" />

        <com.hocrox.worldwidecdln.utils.CustomTextView
            android:id="@+id/tvYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/tvPrice"
            android:layout_alignStart="@+id/tvOwner"
            android:layout_below="@id/tvAirline"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@id/tvPrice"
            android:text="@string/year"
            android:textColor="@color/colorgreytext" />

        <com.hocrox.worldwidecdln.utils.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/tvAirline"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/members"
            android:textColor="@color/ColorblackText" />

        <TextView
            android:id="@+id/owner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvPrice"
            android:layout_marginLeft="10dp"

            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/ivAirline"
            android:text="@string/owner"
            android:textColor="@color/ColorblackText" />

        <TextView
            android:id="@+id/tvOwner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/owner"
            android:layout_below="@id/tvYear"
           android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/owner"
            android:text="@string/ownername"
            android:textColor="@color/colorgreytext" />

    </RelativeLayout>
</android.support.v7.widget.CardView>