<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register_back"
    android:orientation="vertical"
    tools:context="com.hocrox.worldwidecdln.authentication.LoginActivity">

    <com.hocrox.worldwidecdln.utils.CustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:text="@string/memberEmailVerfication"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/rl_rootLayout"
        android:background="@color/colorWhite" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:background="@drawable/app_logo_large" />

        <com.hocrox.worldwidecdln.utils.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/newPassword"
            android:textColor="@color/colorWhite"
            android:textSize="14sp" />

        <com.hocrox.worldwidecdln.utils.CustomEditText
            android:id="@+id/etConfirmEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:background="@drawable/white_rectangle"
            android:hint="@string/yourEmail"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"

            android:padding="14dp"
            android:singleLine="true"

            android:textColorHint="@color/colorgreytext"
            android:textSize="14sp" />


        <com.hocrox.worldwidecdln.utils.CustomEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/white_rectangle"
            android:hint="@string/tempPassword"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"

            android:padding="14dp"
            android:singleLine="true"

            android:textColorHint="@color/colorgreytext"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btnResetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:background="@drawable/button_modification"
            android:text="@string/resendTempPassword"
            android:textColor="@color/colorWhite"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnVerify"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:background="@drawable/blue_transrectangle_button"
                android:text="@string/verify"
                android:textColor="@color/colorWhite"
                android:textSize="12sp" />


            <Button
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"

                android:background="@drawable/blue_transrectangle_button"
                android:text="@string/cancel"
                android:textColor="@color/colorWhite"
                android:textSize="12sp" />

        </LinearLayout>
    </LinearLayout>


</LinearLayout>

